# cookiecutter-dash-full-stack

./: .gitignore  LICENSE  README.md  cookiecutter.json
.github/workflows/: test.yml
scripts/: dev-back.sh  dev.sh  test.sh
{{cookiecutter.project_slug}}/: README.md  package.json  pyproject.toml
{{cookiecutter.project_slug}}/app/: app.py  config.py  encoders.py  index.py  security.py  utils.py
{{cookiecutter.project_slug}}/app/assets/: main.css  main.css.map  sb-admin-2.js
{{cookiecutter.project_slug}}/app/auth/: auth.py  flask_login.py
{{cookiecutter.project_slug}}/app/components/: cards.py  navigation.py  notification.py  sidebar.py  tables.py  wrappers.py
{{cookiecutter.project_slug}}/app/crud/: __init__.py  crud_user.py
{{cookiecutter.project_slug}}/app/db/: base.py  base_class.py  session.py
{{cookiecutter.project_slug}}/app/db_models/: __init__.py  user.py
{{cookiecutter.project_slug}}/app/schemas/: __init__.py  user.py  utils.py
{{cookiecutter.project_slug}}/app/templates/: login.html
{{cookiecutter.project_slug}}/app/views/: __init__.py  error.py  home.py  login.py  users.py  users_create.py  users_profile.py  users_update.py
{{cookiecutter.project_slug}}/scripts/: format-imports.sh  format.sh  lint.sh  test-cov-html.sh  test.sh
{{cookiecutter.project_slug}}/scss/: _dash_tabs.scss  sb-admin-2.scss
{{cookiecutter.project_slug}}/tests/: conftest.py  test_login.py
