[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <elbenjakobjul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
