[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <elbenjakobjul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.19.0"
Flask-Login = "^0.5.0"
SQLAlchemy = "^1.3.22"
pydantic = {extras = ["email"], version = "^1.7.3"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyterlab = "^3.0.5"
jedi = "0.17.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
