[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <elbenjakobjul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.19.0"
Flask-Login = "^0.5.0"
SQLAlchemy = "^1.3.22"
pydantic = {extras = ["email"], version = "^1.7.3"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
dash-data-table = "^0.0.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyterlab = "^3.0.5"
jedi = "0.17.*"
dash = {extras = ["testing"], version = "^1.19.0"}
flake8 = "^3.8.4"
isort = "^5.7.0"
pytest-cov = "^2.11.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
